# whisper-flow-linux

./: README.md  pyproject.toml  setup.sh  test.txt
src/whisper_flow/: __init__.py  app.py  audio.py  cli.py  completion.py  config.py  daemon.py  hotkey_manager.py  logging.py  prompts.py  system.py  transcription.py
tests/: __init__.py  conftest.py  test_app.py  test_daemon.py  test_daemon_tray.py  test_hotkey_manager.py  test_tray.py
